fixed white background behind the slides

--- a/components/slide/slide.module.css
+++ b/components/slide/slide.module.css
@@ -18,7 +18,7 @@
   animation: blowUp 10s ease-in-out;
   animation-fill-mode: forwards;
 
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   background-position: center;
   background-repeat: no-repeat;
 }
